--- a/FIM/build.gradle
+++ b/FIM/build.gradle
@@ -9,11 +9,15 @@ buildscript {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
 }
-
+ plugins {
+    id "org.sonarqube" version "2.2.1"
+}
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
  apply plugin: 'war'
+apply plugin: 'org.sonarqube'
+apply plugin: 'jacoco'
 war {
 	archiveName 'FIM.war'
     }
@@ -26,14 +30,26 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
 }
+sonarqube {
+  properties {
+    property "sonar.projectName", "FIM"
+    property "sonar.projectKey", "FIM"
+    property "sonar.test.inclusions","${project.buildDir}/src/test/java"
+    property "sonar.java.coveragePlugin", "jacoco"
+    property "sonar.jacoco.reportPath", "${buildDir}/jacoco/test.exec"
+    property "sonar.web.port",9000
+  }
+  }
 dependencies {
 
 	compile "org.springframework.boot:spring-boot-starter-web:1.4.2.RELEASE"
     compile "org.springframework.boot:spring-boot-starter-data-rest:1.4.2.RELEASE"
     compile "org.springframework.boot:spring-boot-starter-thymeleaf:1.4.2.RELEASE"
 	compile	"org.springframework.boot:spring-boot-starter-data-mongodb:1.4.2.RELEASE"
+	
 	compile "org.springframework.cloud:spring-cloud-cloudfoundry-connector:1.2.3.RELEASE"
 	compile "org.springframework.cloud:spring-cloud-spring-service-connector:1.2.3.RELEASE"
+   
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'1.4.2.RELEASE'
     
     compile group: 'javax.servlet', name: 'jstl', version:'1.2'
