--- a/FIM/manifest.yml
+++ b/FIM/manifest.yml
@@ -2,10 +2,10 @@
  applications:
  - name: FIM
    buildpack: java_buildpack
-   path: build/libs/FIM.war
+   path: ./build/libs/FIM.war
    instances: 1
    timeout: 180
-   memory: 512M
+   memory: 300M
    host: FIM
    env:
     JBP_CONFIG_OPENJDK: 'verion: 1.8.+'
