--- a/FIM/build.gradle
+++ b/FIM/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 }
 apply plugin: 'java'
 apply plugin: 'eclipse'
-
+apply plugin: 'org.springframework.boot'
  apply plugin: 'war'
 apply plugin: 'org.sonarqube'
 apply plugin: 'jacoco'
